macdir-simple (3.7) UNRELEASED; urgency=medium

  * Set max-width for my links pages.

 -- Bill MacAllister <bill@ca-zephyr.org>  Sat, 10 Mar 2018 16:11:25 -0800

macdir-simple (3.6) unstable; urgency=medium

  * Update input of password on the links maintenance page.

 -- Bill MacAllister <bill@ca-zephyr.org>  Wed, 27 Dec 2017 10:32:26 -0800

macdir-simple (3.5) unstable; urgency=medium

  * Adjust the configuration defaults to be more generic.

 -- Bill MacAllister <bill@ca-zephyr.org>  Mon, 04 Jul 2016 20:12:02 -0700

macdir-simple (3.4) unstable; urgency=medium

  * Correct handling of login shell.
  * Provide default for home directory.

 -- Bill MacAllister <bill@ca-zephyr.org>  Sat, 14 May 2016 11:16:16 -0700

macdir-simple (3.3) unstable; urgency=medium

  * Add in group search scripts.
  * Remove pam_groups support.
  * Remove samba computer support.
  * Convert my_links.php to use a responsive design.

 -- Bill MacAllister <bill@ca-zephyr.org>  Wed, 20 Apr 2016 10:57:18 -0700

macdir-simple (3.2) unstable; urgency=medium

  * Retire all binds to the directory that use the ldap manager password.

 -- Bill MacAllister <bill@ca-zephyr.org>  Sun, 09 Aug 2015 13:51:10 -0700

macdir-simple (3.1) unstable; urgency=medium

  * Correct function call when changing the password.
  * Add ldap-test to make it easy to test basic kerberos connections
    to the ldap server.
    
 -- Bill MacAllister <bill@ca-zephyr.org>  Sat, 08 Aug 2015 16:55:48 -0700

macdir-simple (3.0) unstable; urgency=medium

  * Rename package to prevent confusion with macdir work that has
    GSS-API support.
  * Allow for multiple values for mailDelivery.

 -- Bill MacAllister <bill@ca-zephyr.org>  Wed, 27 May 2015 00:12:14 -0700

macdir (2.7) unstable; urgency=low

  * WebAuth bug fixes.
  * Add and delete kerberos principals.
  * Add setting of kerberos passwords.

 -- Bill MacAllister <mac@spowl.ca-zephyr.org>  Thu, 13 Feb 2014 00:10:07 -0800

macdir (2.6) unstable; urgency=low
